--- a/index.jade
+++ b/index.jade
@@ -11,7 +11,7 @@ html
       .container
         nav.row
           .col-md-12
-            a.logo(href='/') NAME
+            a.logo(href='/') closeheat
 
         .row
           .col-md-10
